--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -54,7 +54,7 @@ pipeline {
         }
         steps {
           withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-            // echo "GITHUB_TOKEN --> $GITHUB_TOKEN"
+            echo " ******** GITHUB --> $GITHUB_TOKEN **********"
                 sh '''
                     git config user.email "jm.sajib012@gmail.com"
                     git config user.name "Jahidul Momin"
