Update deployment image to version 48

--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: spring-boot-app
-        image: jmsajib11/full-ci-cd:replaceImageTag
+        image: jmsajib11/full-ci-cd:48
         ports:
         - containerPort: 8080
