--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -65,22 +65,37 @@ pipeline {
 
     stage('Update Deployment File') {
       environment {
-        GIT_REPO_NAME = "jenkins-ci-cd"
+        GIT_REPO_NAME = "argo-cd-repo"
         GIT_USER_NAME = "JMSajib"
+        GIT_USER_EMAIL = "jm.sajib012@gmail.com"
       }
       steps {
         withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-          echo " ******** GITHUB --> $GITHUB_TOKEN **********"
           sh '''
-            set -e
-            git config user.email "jm.sajib012@gmail.com"
-            git config user.name "Jahidul Momin"
-            sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-            git add .
-            git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-            git commit -m "Update deployment image to version ${BUILD_NUMBER}"
-            git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME}.git HEAD:main
-          '''
+                set -e
+                # Clone the repository
+                git clone https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME}.git
+                
+                # Navigate to the repository directory
+                cd ${GIT_REPO_NAME}
+
+                # Optional: Ensure latest changes
+                git pull origin main
+
+                # Configure git user
+                git config user.email "${GIT_USER_EMAIL}"
+                git config user.name "${GIT_USER_NAME}"
+
+                # Update the deployment file
+                sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" deployment.yml
+
+                # Add and commit changes
+                git add deployment.yml
+                git commit -m "Update deployment image to version ${BUILD_NUMBER} [Jenkins build ${BUILD_NUMBER}]"
+
+                # Push changes back to the repository
+                git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME}.git HEAD:main
+            '''
         }
       }
     }
