--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -5,7 +5,8 @@ pipeline {
     docker {
       // image 'abhishekf5/maven-abhishek-docker-agent:v1'
       image 'jmsajib11/maven-docker-image:v1'
-      args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
+      args '--network="host" --user root -v /var/run/docker.sock:/var/run/docker.sock'
+      // args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
     }
   }
 
